@@ -6,6 +6,8 @@ import static io.openaev.injector_contract.ContractCardinality.Multiple;
 import io.openaev.model.inject.form.Expectation;
 import jakarta.validation.constraints.NotEmpty;
 import jakarta.validation.constraints.NotNull;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import lombok.Getter;
 
@@ -24,14 +26,20 @@ public class ContractExpectations extends ContractCardinalityElement {
   /** Pre-configured expectations to include by default. */
   List<Expectation> predefinedExpectations;
 
+  List<Expectation> availableExpectations;
+
   /**
-   * Creates a new expectations field with predefined expectations.
+   * Creates a new expectations field with predefined and available expectations.
    *
-   * @param expectations the default expectations to include
+   * @param predefinedExpectations the default expectations to include
+   * @param availableExpectations the full list of selectable expectations
    */
-  private ContractExpectations(@NotNull final List<Expectation> expectations) {
+  private ContractExpectations(
+      @NotNull final List<Expectation> predefinedExpectations,
+      @NotNull final List<Expectation> availableExpectations) {
     super(CONTRACT_ELEMENT_CONTENT_KEY_EXPECTATIONS, "Expectations", Multiple);
-    this.predefinedExpectations = expectations;
+    this.predefinedExpectations = new ArrayList<>(predefinedExpectations);
+    this.availableExpectations = new ArrayList<>(availableExpectations);
   }
 
   /**
@@ -40,7 +48,7 @@ public class ContractExpectations extends ContractCardinalityElement {
    * @return a configured ContractExpectations instance
    */
   public static ContractExpectations expectationsField() {
-    return new ContractExpectations(List.of());
+    return new ContractExpectations(Collections.emptyList(), Collections.emptyList());
   }
 
   /**
@@ -51,7 +59,22 @@ public class ContractExpectations extends ContractCardinalityElement {
    */
   public static ContractExpectations expectationsField(
       @NotEmpty final List<Expectation> expectations) {
-    return new ContractExpectations(expectations);
+    return new ContractExpectations(expectations, expectations);
+  }
+
+  /**
+   * Creates an expectations field with distinct predefined and available expectations.
+   *
+   * <p>Use this factory when the set of expectations selectable by the user (available) is broader
+   * than the ones pre-populated by default (predefined), e.g. for payload-based contracts.
+   *
+   * @param predefined expectations pre-populated in the form
+   * @param available full list of expectations the user may choose from
+   * @return a configured ContractExpectations instance
+   */
+  public static ContractExpectations expectationsField(
+      final List<Expectation> predefined, final List<Expectation> available) {
+    return new ContractExpectations(predefined, available);
   }
 
   @Override
